React-deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: react
  labels:
    app: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app-deployment
        image: lordagam/project-devops
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
